--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -41,3 +41,12 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+* {
+    box-sizing: border-box;
+    
+    &::before,
+    &::after{
+        box-sizing: inherit;
+    }
+}
